/*
 * This Java source file was generated by the Gradle 'init' task.
 */
package app;

public class PizzaTestDrive {
    public static void main(String[] args) {
        PizzeriaFactory f1 = PizzeriaFactory.getInstance();
        Pizzeria shopFromBrest = f1.create("Brest");
        Pizzeria shopFromStrasbourg = f1.create("Strasbourg");

        Pizza pizza = shopFromBrest.orderPizza("cheese");
        System.out.println("JMB has ordered a " + pizza.getName() + "\n");

        pizza = shopFromStrasbourg.orderPizza("cheese");
        System.out.println("JMI has ordered a " + pizza.getName() + "\n");
    }
}
