@startuml
abstract class Pizza [[java:app.Pizza]] {
	#String name
	#String crust
	#String sauce
	#ArrayList<String> garnitures
	+void prepare()
	+void bake()
	+void cut()
	+void wrap()
	+String getName()
}
class PizzaCheeseStyleBrest [[java:app.PizzaCheeseStyleBrest]] {
	~PizzaCheeseStyleBrest()
	+String getName()
}
class Pizza [[java:app.Pizza]] {
}
Pizza <|-- PizzaCheeseStyleBrest
class PizzaCheeseStyleStrasbourg [[java:app.PizzaCheeseStyleStrasbourg]] {
	~PizzaCheeseStyleStrasbourg()
	+String getName()
	+void cut()
}
class Pizza [[java:app.Pizza]] {
}
Pizza <|-- PizzaCheeseStyleStrasbourg
abstract class PizzaFactory [[java:app.PizzaFactory]] {
	+Pizza create(String name)
}
class PizzaFactoryBrest [[java:app.PizzaFactoryBrest]] {
	#{static}PizzaFactoryBrest uniqueInstance
	-PizzaFactoryBrest()
	+{static}PizzaFactoryBrest getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryBrest
class PizzaFactoryStrasbourg [[java:app.PizzaFactoryStrasbourg]] {
	#{static}PizzaFactoryStrasbourg uniqueInstance
	-PizzaFactoryStrasbourg()
	+{static}PizzaFactoryStrasbourg getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryStrasbourg
class PizzaTestDrive [[java:app.PizzaTestDrive]] {
	+{static}void main(String[] args)
}
abstract class Pizzeria [[java:app.Pizzeria]] {
	+Pizza orderPizza(String type)
	#Pizza createPizza(String type)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
Pizzeria --> "1" PizzaFactory : pizzaFactory
class PizzeriaBrest [[java:app.PizzeriaBrest]] {
	~PizzeriaBrest(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:app.Pizzeria]] {
}
Pizzeria <|-- PizzeriaBrest
class PizzeriaFactory [[java:app.PizzeriaFactory]] {
	#{static}PizzeriaFactory uniqueInstance
	-PizzeriaFactory()
	+Pizzeria create(String pPizzeriaName)
	+{static}PizzeriaFactory getInstance()
}
class PizzeriaStrasbourg [[java:app.PizzeriaStrasbourg]] {
	~PizzeriaStrasbourg(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:app.Pizzeria]] {
}
Pizzeria <|-- PizzeriaStrasbourg
@enduml